{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 56,
  "lineage": "eb4b605c-ba7a-a25c-4ddb-8ba0fe98dc22",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745193994333:security-group/sg-00aca1833d46b1914",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-00aca1833d46b1914",
            "ingress": [],
            "name": "SimpleGoApp-cluster2022011904390934710000000a",
            "name_prefix": "SimpleGoApp-cluster",
            "owner_id": "745193994333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SimpleGoApp-cluster-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "SimpleGoApp-cluster-eks_cluster_sg",
              "Stack": "SimpleGoApp",
              "Terraform": "true",
              "WorkspaceName": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ab099c71cb847ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745193994333:security-group/sg-0404b117a73f38673",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0404b117a73f38673",
            "ingress": [],
            "name": "SimpleGoApp-cluster20220119043907549000000009",
            "name_prefix": "SimpleGoApp-cluster",
            "owner_id": "745193994333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SimpleGoApp-cluster-eks_worker_sg",
              "kubernetes.io/cluster/SimpleGoApp-cluster": "owned"
            },
            "tags_all": {
              "Name": "SimpleGoApp-cluster-eks_worker_sg",
              "Stack": "SimpleGoApp",
              "Terraform": "true",
              "WorkspaceName": "dev",
              "kubernetes.io/cluster/SimpleGoApp-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ab099c71cb847ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1232724752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00aca1833d46b1914",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2964077224",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00aca1833d46b1914",
            "self": false,
            "source_security_group_id": "sg-0404b117a73f38673",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1515200665",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0404b117a73f38673",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-4262649489",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0404b117a73f38673",
            "self": false,
            "source_security_group_id": "sg-00aca1833d46b1914",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2601142939",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0404b117a73f38673",
            "self": false,
            "source_security_group_id": "sg-00aca1833d46b1914",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-556162043",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0404b117a73f38673",
            "self": false,
            "source_security_group_id": "sg-0404b117a73f38673",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-053afc7c606f0bf3f",
            "domain": "vpc",
            "id": "eipalloc-053afc7c606f0bf3f",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-85-249-177.us-west-2.compute.amazonaws.com",
            "public_ip": "35.85.249.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SimpleGoApp-us-west-2a"
            },
            "tags_all": {
              "Name": "SimpleGoApp-us-west-2a",
              "Stack": "SimpleGoApp",
              "Terraform": "true",
              "WorkspaceName": "dev"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091c921fe24a8de87",
            "domain": "vpc",
            "id": "eipalloc-091c921fe24a8de87",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-237-32-189.us-west-2.compute.amazonaws.com",
            "public_ip": "44.237.32.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SimpleGoApp-us-west-2b"
            },
            "tags_all": {
              "Name": "SimpleGoApp-us-west-2b",
              "Stack": "SimpleGoApp",
              "Terraform": "true",
              "WorkspaceName": "dev"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745193994333:internet-gateway/igw-0d3486f462915071c",
            "id": "igw-0d3486f462915071c",
            "owner_id": "745193994333",
            "tags": {
              "Name": "SimpleGoApp"
            },
            "tags_all": {
              "Name": "SimpleGoApp",
              "Stack": "SimpleGoApp",
              "Terraform": "true",
              "WorkspaceName": "dev"
            },
            "vpc_id": "vpc-05ab099c71cb847ae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-053afc7c606f0bf3f",
            "connectivity_type": "public",
            "id": "nat-0089104a18ecaa941",
            "network_interface_id": "eni-0d866d16fbb883426",
            "private_ip": "192.168.142.25",
            "public_ip": "35.85.249.177",
            "subnet_id": "subnet-08c60e9b0ab087416",
            "tags": {
              "Name": "SimpleGoApp-us-west-2a"
            },
            "tags_all": {
              "Name": "SimpleGoApp-us-west-2a",
              "Stack": "SimpleGoApp",
              "Terraform": "true",
              "WorkspaceName": "dev"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091c921fe24a8de87",
            "connectivity_type": "public",
            "id": "nat-03b551ca1d28351fd",
            "network_interface_id": "eni-06d8f16f52f86e435",
            "private_ip": "192.168.215.235",
            "public_ip": "44.237.32.189",
            "subnet_id": "subnet-03cc112b42f7ec5ed",
            "tags": {
              "Name": "SimpleGoApp-us-west-2b"
            },
            "tags_all": {
              "Name": "SimpleGoApp-us-west-2b",
              "Stack": "SimpleGoApp",
              "Terraform": "true",
              "WorkspaceName": "dev"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08575a7691e1a58ea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0089104a18ecaa941",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08575a7691e1a58ea",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-083e9347b0bf48a621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03b551ca1d28351fd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-083e9347b0bf48a62",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d3486f462915071c",
            "id": "r-rtb-0f62d90f8b9cc866c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f62d90f8b9cc866c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745193994333:route-table/rtb-08575a7691e1a58ea",
            "id": "rtb-08575a7691e1a58ea",
            "owner_id": "745193994333",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SimpleGoApp-private-us-west-2a"
            },
            "tags_all": {
              "Name": "SimpleGoApp-private-us-west-2a",
              "Stack": "SimpleGoApp",
              "Terraform": "true",
              "WorkspaceName": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ab099c71cb847ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745193994333:route-table/rtb-083e9347b0bf48a62",
            "id": "rtb-083e9347b0bf48a62",
            "owner_id": "745193994333",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SimpleGoApp-private-us-west-2b"
            },
            "tags_all": {
              "Name": "SimpleGoApp-private-us-west-2b",
              "Stack": "SimpleGoApp",
              "Terraform": "true",
              "WorkspaceName": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ab099c71cb847ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745193994333:route-table/rtb-0f62d90f8b9cc866c",
            "id": "rtb-0f62d90f8b9cc866c",
            "owner_id": "745193994333",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SimpleGoApp-public"
            },
            "tags_all": {
              "Name": "SimpleGoApp-public",
              "Stack": "SimpleGoApp",
              "Terraform": "true",
              "WorkspaceName": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ab099c71cb847ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0286ace4bd6a0ec60",
            "route_table_id": "rtb-08575a7691e1a58ea",
            "subnet_id": "subnet-02c507a9a26a460cf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07648648d4240cecf",
            "route_table_id": "rtb-083e9347b0bf48a62",
            "subnet_id": "subnet-0cf1a8ae4e9685244"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3e0af2774e3c9a3",
            "route_table_id": "rtb-0f62d90f8b9cc866c",
            "subnet_id": "subnet-08c60e9b0ab087416"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a68f75384d10605",
            "route_table_id": "rtb-0f62d90f8b9cc866c",
            "subnet_id": "subnet-03cc112b42f7ec5ed"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745193994333:subnet/subnet-02c507a9a26a460cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c507a9a26a460cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745193994333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SimpleGoApp-private-us-west-2a"
            },
            "tags_all": {
              "Name": "SimpleGoApp-private-us-west-2a",
              "Stack": "SimpleGoApp",
              "Terraform": "true",
              "WorkspaceName": "dev"
            },
            "vpc_id": "vpc-05ab099c71cb847ae"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745193994333:subnet/subnet-0cf1a8ae4e9685244",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf1a8ae4e9685244",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745193994333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SimpleGoApp-private-us-west-2b"
            },
            "tags_all": {
              "Name": "SimpleGoApp-private-us-west-2b",
              "Stack": "SimpleGoApp",
              "Terraform": "true",
              "WorkspaceName": "dev"
            },
            "vpc_id": "vpc-05ab099c71cb847ae"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745193994333:subnet/subnet-08c60e9b0ab087416",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c60e9b0ab087416",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "745193994333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SimpleGoApp-public-us-west-2a"
            },
            "tags_all": {
              "Name": "SimpleGoApp-public-us-west-2a",
              "Stack": "SimpleGoApp",
              "Terraform": "true",
              "WorkspaceName": "dev"
            },
            "vpc_id": "vpc-05ab099c71cb847ae"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745193994333:subnet/subnet-03cc112b42f7ec5ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cc112b42f7ec5ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "745193994333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SimpleGoApp-public-us-west-2b"
            },
            "tags_all": {
              "Name": "SimpleGoApp-public-us-west-2b",
              "Stack": "SimpleGoApp",
              "Terraform": "true",
              "WorkspaceName": "dev"
            },
            "vpc_id": "vpc-05ab099c71cb847ae"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745193994333:vpc/vpc-05ab099c71cb847ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0c9933d170c26c451",
            "default_route_table_id": "rtb-0178e0b37c5192e89",
            "default_security_group_id": "sg-01a2a6804e90bfe1c",
            "dhcp_options_id": "dopt-2787b15f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05ab099c71cb847ae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0178e0b37c5192e89",
            "owner_id": "745193994333",
            "tags": {
              "Name": "SimpleGoApp"
            },
            "tags_all": {
              "Name": "SimpleGoApp",
              "Stack": "SimpleGoApp",
              "Terraform": "true",
              "WorkspaceName": "dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}